Correção no driver do Postgres

--- a/conf/apim/repository/conf/deployment.toml
+++ b/conf/apim/repository/conf/deployment.toml
@@ -15,14 +15,14 @@ type = "database_unique_id"
 
 [database.apim_db]
 type = "postgre"
-url = "jdbc:postgresql://localhost:5432/postgres?currentSchema=wso2am_db"
+url = "jdbc:postgresql://postgres:5432/postgres?currentSchema=wso2am_db"
 username = "postgres"
 password = "admin@123"
 driver = "org.postgresql.Driver"
 
 [database.shared_db]
 type = "postgre"
-url = "jdbc:postgresql://localhost:5432/postgres?currentSchema=wso2shared_db"
+url = "jdbc:postgresql://postgres:5432/postgres?currentSchema=wso2shared_db"
 username = "postgres"
 password = "admin@123"
 driver = "org.postgresql.Driver"
