--- a/dockerfiles/is-as-km/Dockerfile
+++ b/dockerfiles/is-as-km/Dockerfile
@@ -17,16 +17,13 @@
 # ------------------------------------------------------------------------
 
 # set base Docker image to WSO2 API Manager Docker image with latest WSO2 Updates
-FROM docker.wso2.com/wso2is:5.11.0.0
+FROM docker.wso2.com/wso2is:5.11.0.122-alpine
 LABEL maintainer="WSO2 Docker Maintainers <dev@wso2.org>"
 
-# build arguments for external artifacts
-ARG POSTGRES_CONNECTOR_VERSION=9.1-901.jdbc4
-
-# add PostgreSQL JDBC connector to server home as a third party library
-ADD --chown=wso2carbon:wso2 https://repo1.maven.org/maven2/postgresql/postgresql/${POSTGRES_CONNECTOR_VERSION}/postgresql-${POSTGRES_CONNECTOR_VERSION}.jar ${WSO2_SERVER_HOME}/repository/components/dropins/
+USER root
 
 # copy extensions to the identity server home
 COPY dropins ${WSO2_SERVER_HOME}/repository/components/dropins/
+COPY lib ${WSO2_SERVER_HOME}/repository/components/lib/
 # copy customized webapps to the identity server home
 COPY webapps ${WSO2_SERVER_HOME}/repository/deployment/server/webapps/
