--- a/conf/apim/repository/conf/deployment.toml
+++ b/conf/apim/repository/conf/deployment.toml
@@ -1,6 +1,6 @@
 [server]
 hostname = "localhost"
-node_ip = "127.0.0.1"
+node_ip = "127.0.1.1"
 #offset=0
 mode = "single" #single or ha
 base_path = "${carbon.protocol}://${carbon.host}:${carbon.management.port}"
@@ -94,7 +94,7 @@ https_endpoint = "https://localhost:${https.nio.port}"
 
 
 [apim.key_manager]
-service_url = "https://is-as-km:${mgt.transport.https.port}/services/"
+service_url = "https://is-as-km:9444/services/"
 type = "WSO2-IS"
 #username = "$ref{super_admin.username}"
 #password = "$ref{super_admin.password}"
@@ -122,8 +122,8 @@ type = "WSO2-IS"
 #claims_extractor_impl = "org.wso2.carbon.apimgt.impl.token.ExtendedDefaultClaimsRetriever"
 
 #[apim.oauth_config]
-#enable_outbound_auth_header = false
-#auth_header = "Authorization"
+enable_outbound_auth_header = false
+auth_header = "Authorization"
 #revoke_endpoint = "https://localhost:${https.nio.port}/revoke"
 #enable_token_encryption = false
 #enable_token_hashing = false
@@ -239,10 +239,10 @@ type = "org.wso2.carbon.identity.core.handler.AbstractIdentityHandler"
 name = "org.wso2.is.notification.ApimOauthEventInterceptor"
 order = 1
 [event_listener.properties]
-notification_endpoint = "https://localhost:${mgt.transport.https.port}/internal/data/v1/notify"
+notification_endpoint = "https://is-as-km:9444/internal/data/v1/notify"
 username = "${admin.username}"
 password = "${admin.password}"
-'header.X-WSO2-KEY-MANAGER' = "default"
+'header.X-WSO2-KEY-MANAGER' = "WSO2IS"
 
 [config_data]
 path = "/_system/apim/config"
