--- a/conf/is-as-km/repository/conf/deployment.toml
+++ b/conf/is-as-km/repository/conf/deployment.toml
@@ -1,7 +1,8 @@
 [server]
 hostname = "localhost"
-node_ip = "127.0.0.1"
+node_ip = "127.0.1.1"
 base_path = "https://$ref{server.hostname}:${carbon.management.port}"
+offset=1
 
 [super_admin]
 username = "admin"
@@ -40,7 +41,7 @@ type = "org.wso2.carbon.identity.core.handler.AbstractIdentityHandler"
 name = "org.wso2.is.notification.ApimOauthEventInterceptor"
 order = 1
 [event_listener.properties]
-notification_endpoint = "https://localhost:9443/internal/data/v1/notify"
+notification_endpoint = "https://is_as_km:9444/internal/data/v1/notify"
 username = "${admin.username}"
 password = "${admin.password}"
 'header.X-WSO2-KEY-MANAGER' = "WSO2IS"
