--- a/dockerfiles/is-as-km/Dockerfile
+++ b/dockerfiles/is-as-km/Dockerfile
@@ -17,7 +17,7 @@
 # ------------------------------------------------------------------------
 
 # set base Docker image to WSO2 API Manager Docker image with latest WSO2 Updates
-FROM docker.wso2.com/wso2is:5.10.0
+FROM carloshlemos/wso2is
 LABEL maintainer="WSO2 Docker Maintainers <dev@wso2.org>"
 
 USER root
