--- a/dockerfiles/is-as-km/Dockerfile
+++ b/dockerfiles/is-as-km/Dockerfile
@@ -17,8 +17,7 @@
 # ------------------------------------------------------------------------
 
 # set base Docker image to WSO2 API Manager Docker image with latest WSO2 Updates
-FROM carloshlemos/dfts_apim_is-as-km:1.0.1
-
+FROM carloshlemos/wso2is:5.10.0.158-alpine
 LABEL maintainer="WSO2 Docker Maintainers <dev@wso2.org>"
 
 USER root
